istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cluster-gateway
spec:
  selector:
    istio: ingressgateway # Istio default controller
  servers:
    - port:
        number: 80
        name: http2
        protocol: HTTP2
      hosts:
        - '*'
