istio/auth-virtual-svc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth-virtual-svc
spec:
  hosts:
    - '*'
  gateways:
    - cluster-gateway
  http:
    - match:
        - uri:
            prefix: /auth
      route:
        - destination:
            host: auth-svc
