istio/circuit-breaker-virtual-svc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: circuit-breaker-virtual-svc
spec:
  hosts:
    - '*'
  gateways:
    - cluster-gateway
  http:
    - match:
        - uri:
            prefix: /circuit-breaker
      route:
        - destination:
            host: circuit-breaker-svc
