istio/node-virtual-svc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: node-virtual-svc
spec:
  hosts:
    - '*'
  gateways:
    - cluster-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: node-svc
