istio/weather-virtual-svc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: weather-virtual-svc
spec:
  hosts:
    - '*'
  gateways:
    - cluster-gateway
  http:
    - match:
        - uri:
            prefix: /weather
      route:
        - destination:
            host: weather-svc
